--- a/desafio-node/docker-compose.yml
+++ b/desafio-node/docker-compose.yml
@@ -8,28 +8,41 @@ services:
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
-      - node-app
+      - app
+    networks: 
+      - node-network
 
-  node-app:
-    build: ./node-app
-    volumes:
-      - ./node-app:/usr/src/app
+  app:
+    build: 
+      context: node-app
+    container_name: app
+    volumes: 
+      - ./node:/usr/src/app
     environment:
-      - MYSQL_HOST=mysql
+      - MYSQL_HOST=db
       - MYSQL_USER=root
       - MYSQL_PASSWORD=root
       - MYSQL_DB=testdb
     depends_on:
-      - mysql
+      - db
+    networks: 
+      - node-network
 
-  mysql:
+  db:
     image: mysql:5.7
+    container_name: db
     environment:
       MYSQL_ROOT_PASSWORD: root
       MYSQL_DATABASE: testdb
     volumes:
       - mysql-data:/var/lib/mysql
       - ./db/init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks: 
+      - node-network
 
 volumes:
   mysql-data:
+
+networks: 
+  node-network:
+    driver: bridge 
